--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,6 @@ html,body{
   width: auto;
 
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
